--- a/style.css
+++ b/style.css
@@ -9,120 +9,126 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-
 @media (max-width: 1000px) {
-    main {
-      padding: 0 1rem;
-    }
+  main {
+    padding: 0 1rem;
   }
-
-
+}
 h2 {
-    padding: 0;
-    margin: 0;
-    font-size: 1rem;
+  padding: 0;
+  margin: 0;
+  font-size: 1rem;
 }
 
 header {
-    font-family: "Shrikhand", cursive;
-    text-align: center;
-    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
-    padding: 1rem;
-    margin: 0;
-    position: relative;
+  font-family: "Shrikhand", cursive;
+  text-align: center;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  padding: 1rem;
+  margin: 0;
+  position: relative;
+}
 
-  }
+.city {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  background-color: #f3f3f3;
+  text-align: center;
+  padding: 1.25rem 1rem;
+}
 
-  .city {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    background-color: #f3f3f3;
-    text-align: center;
-    padding: 1.25rem 1rem;
-  }
-  .city i {
-    font-size: 1.5rem;
-  }
-  .city h2 {
-    font-size: 1.5rem;
-  }
-  
-  .explorer {
-    text-align: center;
-    margin: 2rem;
-  }
-  .explorer h2 {
-    font-size: 1.5rem;
-    margin: 1rem;
-  }
-  .explorer p {
-    font-weight: 300;
-  }
-  .explorer button {
-    color: white;
-    font-weight: 600;
-    font-size: 1.5rem;
-    padding: 1rem 2rem;
-    border: none;
-    border-radius: 2rem;
-    transition: transform 200ms;
-    margin-top: 1rem;
-    cursor: pointer;
-    box-shadow: 2px 1px 8px -3px #7e7e7e;
-    background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-    font-size: 1rem;
-  }
-  .explorer button:hover {
-    transform: scale(1.02);
-    opacity: 0.9;
-  }
-  
-  .tuto {
-    counter-reset: steps;
-    margin-bottom: 2rem;
-  }
+.city i {
+  font-size: 1.5rem;
+}
+
+.city h2 {
+  font-size: 1.5rem;
+}
+
+.explorer {
+  text-align: center;
+  margin: 2rem;
+}
+
+.explorer h2 {
+  font-size: 1.5rem;
+  margin: 1rem;
+}
+
+.explorer p {
+  font-weight: 300;
+}
+
+.explorer button {
+  color: white;
+  font-weight: 600;
+  font-size: 1.5rem;
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 2rem;
+  transition: transform 200ms;
+  margin-top: 1rem;
+  cursor: pointer;
+  box-shadow: 2px 1px 8px -3px #7e7e7e;
+  background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  font-size: 1rem;
+}
+
+.explorer button:hover {
+  transform: scale(1.02);
+  opacity: 0.9;
+}
+
+.tuto {
+  counter-reset: steps;
+  margin-bottom: 2rem;
+}
+
+.tuto ol {
+  display: flex;
+  gap: 2rem;
+}
+
+@media (max-width: 1000px) {
   .tuto ol {
-    display: flex;
-    gap: 2rem;
+    flex-direction: column;
   }
-  @media (max-width: 1000px) {
-    .tuto ol {
-      flex-direction: column;
-    }
-  }
-  .tuto li {
-    display: flex;
-    align-items: center;
-    list-style-type: none;
-    background-color: #f6f6f6;
-    padding: 1.5rem 2rem;
-    flex-grow: 1;
-    border-radius: 1rem;
-    box-shadow: 2px 1px 8px -3px #7e7e7e;
-  }
+}
+.tuto li {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+  background-color: #f6f6f6;
+  padding: 1.5rem 2rem;
+  flex-grow: 1;
+  border-radius: 1rem;
+  box-shadow: 2px 1px 8px -3px #7e7e7e;
+}
 
-  .tuto li:hover {
-    transform: scale(1.02);
-    background-color: #f2eafb;
-  }
+.tuto li:hover {
+  transform: scale(1.02);
+  background-color: #f2eafb;
+}
 
-  .tuto li i.fas {
-    margin-right: 1rem;
-    color: #7e7e7e;
-    font-size: 1.5rem;
-  }
+.tuto li i.fas {
+  margin-right: 1rem;
+  color: #7e7e7e;
+  font-size: 1.5rem;
+}
 
-  .menus {
-    background-color: #f6f6f6;
-  }
+.menus {
+  background-color: #f6f6f6;
+}
 
-  .menus .card {
-    border: 1px solid black;
-    height: 4rem;
-  }
+.menus .card {
+  border: 1px solid black;
+  height: 4rem;
+}
 
-  .menus .card .menus__cards {
-    display: flex;
-  }
+.menus .card .menus__cards {
+  display: flex;
+}
+
+/*# sourceMappingURL=style.css.map */
