--- a/style.css
+++ b/style.css
@@ -1,14 +1,3 @@
-*,
-::before,
-::after {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: "Roboto", sans-serif;
-}
-
 @media (max-width: 1000px) {
   main {
     padding: 0 1rem;
@@ -129,6 +118,10 @@ header {
 
 .menus .card .menus__cards {
   display: flex;
+}
+
+div {
+  background-color: blue;
 }
 
 /*# sourceMappingURL=style.css.map */
