--- a/style.scss
+++ b/style.scss
@@ -1,14 +1,3 @@
-*,
-::before,
-::after {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: "Roboto", sans-serif;
-}
-
 
 @media (max-width: 1000px) {
     main {
@@ -125,4 +114,8 @@ header {
 
   .menus .card .menus__cards {
     display: flex;
+  }
+
+  div {
+    background-color: blue;
   }
