--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+*,
+::before,
+::after {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+
 @media (max-width: 1000px) {
   main {
     padding: 0 1rem;
@@ -27,11 +38,9 @@ header {
   text-align: center;
   padding: 1.25rem 1rem;
 }
-
 .city i {
   font-size: 1.5rem;
 }
-
 .city h2 {
   font-size: 1.5rem;
 }
@@ -40,16 +49,13 @@ header {
   text-align: center;
   margin: 2rem;
 }
-
 .explorer h2 {
   font-size: 1.5rem;
   margin: 1rem;
 }
-
 .explorer p {
   font-weight: 300;
 }
-
 .explorer button {
   color: white;
   font-weight: 600;
@@ -64,7 +70,6 @@ header {
   background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
   font-size: 1rem;
 }
-
 .explorer button:hover {
   transform: scale(1.02);
   opacity: 0.9;
@@ -74,18 +79,17 @@ header {
   counter-reset: steps;
   margin-bottom: 2rem;
 }
-
 .tuto ol {
   display: flex;
   gap: 2rem;
 }
-
 @media (max-width: 1000px) {
   .tuto ol {
     flex-direction: column;
   }
 }
 .tuto li {
+  position: relative;
   display: flex;
   align-items: center;
   list-style-type: none;
@@ -93,14 +97,26 @@ header {
   padding: 1.5rem 2rem;
   flex-grow: 1;
   border-radius: 1rem;
-  box-shadow: 2px 1px 8px -3px #7e7e7e;
 }
-
+.tuto li::before {
+  content: counter(steps);
+  counter-increment: steps;
+  color: white;
+  background-color: #9356dc;
+  width: 2rem;
+  height: 2rem;
+  display: grid;
+  place-items: center;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: -1rem;
+  transform: translateY(-50%);
+}
 .tuto li:hover {
   transform: scale(1.02);
   background-color: #f2eafb;
 }
-
 .tuto li i.fas {
   margin-right: 1rem;
   color: #7e7e7e;
@@ -110,18 +126,26 @@ header {
 .menus {
   background-color: #f6f6f6;
 }
-
 .menus .card {
   border: 1px solid black;
   height: 4rem;
 }
-
 .menus .card .menus__cards {
   display: flex;
 }
 
-div {
-  background-color: blue;
+footer {
+  background-color: #353535;
+  padding: 1rem 2rem;
+  color: white;
+}
+footer h2 {
+  font-family: "Shrikhand", "sans-serif";
+  font-weight: 500;
+  padding: 1rem 0;
+}
+footer p {
+  padding: 0.2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
