--- a/sass/layout/menus.scss
+++ b/sass/layout/menus.scss
@@ -1,12 +1,62 @@
+@use "../utils/variables";
+@use "../utils/colors";
+
 .menus {
     background-color: #f6f6f6;
-    
-    & .card {
-      border: 1px solid black;
-      height: 4rem;
+    h1 {
+      margin-bottom: 2rem;
     }
     
-    & .card .menus__cards {
-      display: flex;
+    .menus__cards {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 2rem;
+      @media (max-width: variables.$breakpoint){
+        grid-template-columns: repeat(1n 1fr);
+      }
+      .new {
+        position: relative;
+      }
+      .new::before {
+        content: "Nouveau";
+        position: absolute;
+        height: 3rem;
+        width: 5rem;
+        background-color: colors.$color-tertiary;
+        color: darken (colors.$color-tertiary, 50%);
+        display: grid;
+        place-items: center;
+        right: 1rem;
+        top: 1rem;
+      }
+    }
+    .card {
+      &__image {
+        height: 15rem;
+        border-radius: 1rem;
+        background-size: cover;
+      }
+      @for $i from 1 through 4{
+        &__image-#{$i} {
+          background-image: url("images/menu-#{$i}.jpg");
+
+        }
+      }
+      &__description {
+        position: relative;
+        h3, p {
+          margin: 0.5rem;
+        }
+        h3 {
+          padding-top: 0.5rem;
+        }
+        i {
+          font-size: 2rem;
+          position: absolute;
+          right: 1rem;
+          top: 50%;
+          transform: translateY(-50%);        
+        }
+      }
     }
   }
