--- a/style.css
+++ b/style.css
@@ -14,12 +14,6 @@ body {
     padding: 0 1rem;
   }
 }
-h2 {
-  padding: 0;
-  margin: 0;
-  font-size: 1rem;
-}
-
 header {
   font-family: "Shrikhand", cursive;
   text-align: center;
@@ -126,12 +120,66 @@ header {
 .menus {
   background-color: #f6f6f6;
 }
-.menus .card {
-  border: 1px solid black;
-  height: 4rem;
+.menus h1 {
+  margin-bottom: 2rem;
 }
-.menus .card .menus__cards {
-  display: flex;
+.menus .menus__cards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+@media (max-width: 1000px) {
+  .menus .menus__cards {
+    grid-template-columns: repeat(1n 1fr);
+  }
+}
+.menus .menus__cards .new {
+  position: relative;
+}
+.menus .menus__cards .new::before {
+  content: "Nouveau";
+  position: absolute;
+  height: 3rem;
+  width: 5rem;
+  background-color: #99e2d0;
+  color: darken #99e2d0, 50%;
+  display: grid;
+  place-items: center;
+  right: 1rem;
+  top: 1rem;
+}
+.menus .card__image {
+  height: 15rem;
+  border-radius: 1rem;
+  background-size: cover;
+}
+.menus .card__image-1 {
+  background-image: url("images/menu-1.jpg");
+}
+.menus .card__image-2 {
+  background-image: url("images/menu-2.jpg");
+}
+.menus .card__image-3 {
+  background-image: url("images/menu-3.jpg");
+}
+.menus .card__image-4 {
+  background-image: url("images/menu-4.jpg");
+}
+.menus .card__description {
+  position: relative;
+}
+.menus .card__description h3, .menus .card__description p {
+  margin: 0.5rem;
+}
+.menus .card__description h3 {
+  padding-top: 0.5rem;
+}
+.menus .card__description i {
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 footer {
