forget to commit

--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -1,9 +1,7 @@
 header {
-    font-family: "Shrikhand", cursive;
-    text-align: center;
-    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
-    padding: 1rem;
-    margin: 0;
-    position: relative;
-
-  }
+  font-family: "Shrikhand", cursive;
+  text-align: center;
+  box-shadow: 0 0 0.5rem rgb(0 0 0 /25%);
+  padding: 0.3rem;
+  position: relative;
+}
