--- a/sass/base.scss
+++ b/sass/base.scss
@@ -10,8 +10,11 @@ body {
 }
 
 
-@media (max-width: 1000px) {
-    main {
-      padding: 0 1rem;
-    }
-  }
+h2, h3, p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
