--- a/sass/layout/menus.scss
+++ b/sass/layout/menus.scss
@@ -1,18 +1,21 @@
 @use "../utils/variables";
 @use "../utils/colors";
+@use "../utils/mixins";
 
-.menus {
+  .menus {
     background-color: #f6f6f6;
-    h1 {
-      margin-bottom: 2rem;
+    & h2 {
+      padding: 2rem 1rem;
     }
-    
+
     .menus__cards {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 2rem;
-      @media (max-width: variables.$breakpoint){
-        grid-template-columns: repeat(1n 1fr);
+      margin: 1rem;
+      padding-bottom: 3rem;
+      @media (max-width: variables.$breakpoint) {
+        grid-template-columns: repeat(1, 1fr);
       }
       .new {
         position: relative;
@@ -20,21 +23,23 @@
       .new::before {
         content: "Nouveau";
         position: absolute;
-        height: 3rem;
+        height: 2rem;
         width: 5rem;
         background-color: colors.$color-tertiary;
-        color: darken (colors.$color-tertiary, 50%);
+        color: darken(colors.$color-tertiary, 50%);
         display: grid;
         place-items: center;
         right: 1rem;
         top: 1rem;
       }
     }
+
     .card {
       &__image {
         height: 15rem;
-        border-radius: 1rem;
+        border-radius: 1rem 1rem 0 0;
         background-size: cover;
+        background-position: center;
       }
       @for $i from 1 through 4{
         &__image-#{$i} {
@@ -44,18 +49,21 @@
       }
       &__description {
         position: relative;
-        h3, p {
-          margin: 0.5rem;
+        background-color: white;
+        border-radius: 0 0 1rem 1rem;
+        &::before {
+          @include mixins.heart;
         }
-        h3 {
-          padding-top: 0.5rem;
+        &::after {
+          @include mixins.heart(0, 900, transparent);
+          @include mixins.gradient(1);
         }
-        i {
-          font-size: 2rem;
-          position: absolute;
-          right: 1rem;
-          top: 50%;
-          transform: translateY(-50%);        
+        &:hover::after {
+          opacity: 1;
+          transform: translateY(-50%) scale(1.1);
+        }
+        h3,p {
+          padding: 0.5rem;
         }
       }
     }
