--- a/sass/layout/tuto.scss
+++ b/sass/layout/tuto.scss
@@ -1,52 +1,55 @@
+@use "../utils/mixins";
 @use "../utils/variables";
 @use "../utils/colors";
 
 .tuto {
-    counter-reset: steps;
-    margin-bottom: 2rem;
-    & ol {
-      display: flex;
-      gap: 2rem;
+  counter-reset: steps;
+  & h2 {
+    padding: 2rem 1rem;
+  }
+  & ol {
+    display: flex;
+    gap: 2rem;
+    @media (max-width: variables.$breakpoint) {
+      flex-direction: column;
     }
-    @media (max-width: 1000px) {
-      & ol {
-        flex-direction: column;
+  }
+  & li {
+    position: relative;
+    display: flex;
+    align-items: center;
+    &::before {
+      content: counter(steps);
+      counter-increment: steps;
+      color: white;
+      background-color: colors.$purple;
+      width: 2 * variables.$tuto-bullet-height;
+      height: 2 * variables.$tuto-bullet-height;
+      display: grid;
+      place-items: center;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: -1 * variables.$tuto-bullet-height;
+      transform: translateY(-50%);
+    }
+    list-style-type: none;
+    background-color: #f6f6f6;
+    padding: 1.5rem 2rem;
+    flex-grow: 1;
+    border-radius: 1rem;
+    @include mixins.box-shadow;
+    &:hover {
+      @include mixins.transform-zoom;
+      background-color: lighten(colors.$purple, 35%);
+      i::before {
+        color: colors.$purple;
       }
     }
-    & li {
-      position: relative;
-      display: flex;
-      align-items: center;
-      &::before {
-        content: counter(steps);
-        counter-increment: steps;
-        color: white;
-        background-color: colors.$purple;
-        width: 2 * variables.$tuto-bullet-height;
-        height: 2 * variables.$tuto-bullet-height;
-        display: grid;
-        place-items: center;
-        border-radius: 50%;
-        position: absolute;
-        top: 50%;
-        left: -1 * variables.$tuto-bullet-height;
-        transform: translateY(-50%);
-      }
-      list-style-type: none;
-      background-color: #f6f6f6;
-      padding: 1.5rem 2rem;
-      flex-grow: 1;
-      border-radius: 1rem;
-    }
-    
-    & li:hover {
-      transform: scale(1.02);
-      background-color: #f2eafb;
-    }
-    
-    & li i.fas {
+    & i.fas {
       margin-right: 1rem;
-      color: #7e7e7e;
+      color: colors.$lightgrey;
       font-size: 1.5rem;
     }
   }
+}
