--- a/sass/layout/menus.scss
+++ b/sass/layout/menus.scss
@@ -2,6 +2,8 @@
 @use "../utils/colors";
 @use "../utils/mixins";
 
+#homepage {
+
   .menus {
     background-color: #f6f6f6;
     & h2 {
@@ -52,15 +54,7 @@
         background-color: white;
         border-radius: 0 0 1rem 1rem;
         &::before {
-          @include mixins.heart;
-        }
-        &::after {
-          @include mixins.heart(0, 900, transparent);
-          @include mixins.gradient(1);
-        }
-        &:hover::after {
-          opacity: 1;
-          transform: translateY(-50%) scale(1.1);
+          @include mixins.heart-animated;
         }
         h3,p {
           padding: 0.5rem;
@@ -68,3 +62,4 @@
       }
     }
   }
+}
