--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ header {
   inset: 0;
   z-index: 1;
   opacity: 0.9;
-  animation: disappear 200ms 3s forwards;
+  animation: disappear 200ms 2s forwards;
   transform-origin: top;
 }
 .loader::after {
@@ -92,7 +92,7 @@ header {
   border-top: 5px solid #9356dc;
   border-radius: 50%;
   animation: spin 1s ease-in-out;
-  animation-iteration-count: 3;
+  animation-iteration-count: 2;
 }
 
 @keyframes disappear {
@@ -410,13 +410,22 @@ footer p {
   overflow: hidden;
 }
 #page-resto .menu-grid .menu__category .menu-item {
+  animation: appear 1s;
   display: flex;
   background-color: white;
   border-radius: 1rem;
   overflow: hidden;
   margin: 0.5rem;
   box-shadow: 2px 1px 8px -3px #7e7e7e;
-  animation: appear 3s;
+}
+#page-resto .menu-grid .menu__category .menu-item:nth-child(1) {
+  animation-delay: 100ms;
+}
+#page-resto .menu-grid .menu__category .menu-item:nth-child(2) {
+  animation-delay: 200ms;
+}
+#page-resto .menu-grid .menu__category .menu-item:nth-child(3) {
+  animation-delay: 300ms;
 }
 #page-resto .menu-grid .menu__category .menu-item .menu-item__price {
   margin-left: auto;
