--- a/sass/layout/menus.scss
+++ b/sass/layout/menus.scss
@@ -49,12 +49,21 @@
 
         }
       }
-      &__description {
+      &__desc {
         position: relative;
         background-color: white;
         border-radius: 0 0 1rem 1rem;
         &::before {
-          @include mixins.heart-animated;
+          @include mixins.heart;
+        }
+        &::after {
+            @include mixins.heart($opacity: 0, $font-weight: 900, $color: transparent);
+            @include mixins.gradient(1);
+          }
+        &:hover::after {
+            opacity: 1;
+            transform: translateY(-50%) scale(1.1);
+          }
         }
         h3,p {
           padding: 0.5rem;
@@ -62,4 +71,3 @@
       }
     }
   }
-}
