--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -36,25 +36,9 @@
   background-clip: text;
   -webkit-background-clip: text;
   opacity: $opacity;
-  transition: all 0.5s ease-in-out;
+  transition: all 400ms ease-in-out;
 }
 
-@mixin heart-animated {
-  position: relative;
-  background-color: white;
-  border-radius: 0 0 1rem 1rem;
-  &::before {
-    @include heart;
-  }
-  &::after {
-    @include heart($opacity: 0, $font-weight: 900, $color: transparent);
-    @include gradient(1);
-  }
-  &:hover::after {
-    opacity: 1;
-    transform: translateY(-50%) scale(1.1);
-  }
-}
 
 
 
