--- a/sass/pages/restaurant.scss
+++ b/sass/pages/restaurant.scss
@@ -12,7 +12,7 @@
     top: 50%;
     transform: translateY(-50%);
     font-size: 22px;
-    padding: 1.5rem;
+    padding: 1rem;
   }
 
   .banner img {
@@ -33,7 +33,15 @@
         padding: 2rem 1rem;
     }
     &::before {
-        @include mixins.heart-animated;
+      @include mixins.heart;
+    }
+    &::after {
+      @include mixins.heart($opacity: 0, $font-weight: 900, $color: transparent);
+      @include mixins.gradient(1);
+    }
+  &:hover::after {
+      opacity: 1;
+      transform: translateY(-50%) scale(1.1);
     }
 }
 
@@ -105,7 +113,7 @@
         background-color: colors.$color-tertiary;
         margin-right: -$button-width;
         width: $button-width;
-        transition: margin-right 0.5s;
+        transition: margin-right 1s;
         i {
           display: grid;
           place-items: center;
@@ -123,7 +131,7 @@
         }
         i {
           @include animations.quarterspin;
-          animation: quarterspin 0.4s ease-in-out;
+          animation: quarterspin 1s ease-in-out;
         }
       }
     }
