--- a/sass/layout/tuto.scss
+++ b/sass/layout/tuto.scss
@@ -43,6 +43,7 @@
     &:hover {
       @include mixins.transform-zoom;
       background-color: lighten(colors.$purple, 35%);
+      cursor: pointer;
       i::before {
         color: colors.$purple;
       }
