--- a/sass/layout/menus.scss
+++ b/sass/layout/menus.scss
@@ -107,7 +107,7 @@
       }
     
       &__like {
-        transition-duration: .25s;
+        transition-duration: 1s;
         background-color: #f6f6f6;
         position: absolute;
         top: 0;
