--- a/sass/layout/menus.scss
+++ b/sass/layout/menus.scss
@@ -11,11 +11,14 @@
 
     .menus__cards {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(4, 1fr);
       gap: 2rem;
       margin: 1rem;
       padding-bottom: 3rem;
-      @media (max-width: variables.$breakpoint) {
+      @media (max-width: variables.$breakpoint-tablet) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @media (max-width: variables.$breakpoint-mobile) {
         grid-template-columns: repeat(1, 1fr);
       }
       .new {
