--- a/sass/layout/tuto.scss
+++ b/sass/layout/tuto.scss
@@ -11,7 +11,7 @@
     display: flex;
     gap: 2rem;
     margin-right: 1rem;
-    @media (max-width: variables.$breakpoint) {
+    @media (max-width: 780px) {
       flex-direction: column;
     }
   }
