--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ header {
   gap: 2rem;
   margin-right: 1rem;
 }
-@media (max-width: 1024px) {
+@media (max-width: 780px) {
   .tuto ol {
     flex-direction: column;
   }
@@ -169,12 +169,17 @@ header {
 }
 .menus .menus__cards {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
   margin: 1rem;
   padding-bottom: 3rem;
 }
-@media (max-width: 1024px) {
+@media (max-width: 900px) {
+  .menus .menus__cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 480px) {
   .menus .menus__cards {
     grid-template-columns: repeat(1, 1fr);
   }
@@ -412,7 +417,7 @@ footer p {
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
 }
-@media (max-width: 1024px) {
+@media (max-width: 900px) {
   #page-resto .menu-grid {
     grid-template-columns: 1fr;
   }
